tests/derive_ui/flatten_struct_in_enum.stderr
error[E0277]: the trait bound `SubCmd: Subcommand` is not satisfied
 --> tests/derive_ui/flatten_struct_in_enum.rs:4:9
  |
  4 |     Sub(SubCmd),
    |         ^^^^^^ unsatisfied trait bound
    |
help: the trait `Subcommand` is not implemented for `SubCmd`
   --> tests/derive_ui/flatten_struct_in_enum.rs:8:1
    |
  8 | struct SubCmd {}
    | ^^^^^^^^^^^^^
help: the following other types implement trait `Subcommand`
   --> tests/derive_ui/flatten_struct_in_enum.rs:1:10
    |
  1 | #[derive(clap::Parser)]
    |          ^^^^^^^^^^^^ `Opt`
    |
   ::: clap_builder/src/derive.rs
    |
    | impl<T: Subcommand> Subcommand for Box<T> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Box<T>`
...
    | impl Subcommand for () {
    | ^^^^^^^^^^^^^^^^^^^^^^ `()`
...
    | impl Subcommand for Infallible {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Infallible`
    = note: this error originates in the derive macro `clap::Parser` (in Nightly builds, run with -Z macro-backtrace for more info)
